# GEM

./: .gitignore  LICENSE  README.md  environment.yml  nohup.out  pyproject.toml
conda-recipe/: meta.yaml
gem/: cli.py  pipeline.py
gem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
gem_output/: Genetic_contexts_merged_d0.fasta  Genetic_contexts_merged_d10000.fasta  Genetic_contexts_merged_d12000.fasta  Genetic_contexts_merged_d2000.fasta  Genetic_contexts_merged_d4000.fasta  Genetic_contexts_merged_d6000.fasta  Genetic_contexts_merged_d8000.fasta  Species_link_Genetic_Exchange_Prediction_d0.csv  Species_link_Genetic_Exchange_Prediction_d10000.csv  Species_link_Genetic_Exchange_Prediction_d12000.csv  Species_link_Genetic_Exchange_Prediction_d2000.csv  Species_link_Genetic_Exchange_Prediction_d4000.csv  Species_link_Genetic_Exchange_Prediction_d6000.csv  Species_link_Genetic_Exchange_Prediction_d8000.csv  blast_query_subject_pair_counts.csv  known_filtered_5kb.fasta  target_gene_blast_result_10.csv  target_gene_coordinates_d0.csv  target_gene_coordinates_d10000.csv  target_gene_coordinates_d12000.csv  target_gene_coordinates_d2000.csv  target_gene_coordinates_d4000.csv  target_gene_coordinates_d6000.csv  target_gene_coordinates_d8000.csv  target_gene_ref_db.ndb  target_gene_ref_db.nhr  target_gene_ref_db.nin  target_gene_ref_db.njs  target_gene_ref_db.nsq
gem_output/blast_results_d0/: blast_result_d0.csv  merged_context_db.nhr  merged_context_db.nin  merged_context_db.njs  merged_context_db.nsq
test/: known.fasta  target.fasta
(+33 files in other folders)
